--- a/proyecto/src/App.css
+++ b/proyecto/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+/* .App {
+  background: #24C6DC;  
+background: -webkit-linear-gradient(to right, #514A9D, #24C6DC);  
+background: linear-gradient(to right, #514A9D, #24C6DC); 
+  height: 100vh;
+}
+
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+} */
