--- a/proyecto/src/index.css
+++ b/proyecto/src/index.css
@@ -1,13 +1,26 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background: #f1f2b5; 
+  background: -webkit-linear-gradient(
+    to right,
+    #135058,
+    #f1f2b5
+  ); 
+  background: linear-gradient(
+    to right,
+    #135058,
+    #f1f2b5
+  ); 
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/* body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+} */
