--- a/frontend/src/core/styles/general.css
+++ b/frontend/src/core/styles/general.css
@@ -3,11 +3,50 @@
 }
 
 .title1 {
-  font-family:'Courier New', Courier, monospace
+  font-family: "Courier New", Courier, monospace;
 }
 
 .title2 {
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-weight: bold;
   font-size: 10rem;
+}
+
+.section-title {
+  text-align: center;
+  font-family: Overpass;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 70px;
+  line-height: 153px;
+  letter-spacing: 0.1em;
+
+  /* black 2 5 */
+
+  color: #444b59;
+}
+
+.parraf {
+  margin-left: 15%;
+  margin-right: 15%;
+  font-family: Nunito;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 25px;
+  letter-spacing: 0.01em;
+
+  /* black */
+
+  color: #444b59;
+}
+
+.section-start{
+  width: 100%;
+  height: 100vh;
+}
+
+.section-description{
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(189, 251, 255);
 }
