--- a/frontend/src/core/styles/general.css
+++ b/frontend/src/core/styles/general.css
@@ -20,6 +20,7 @@
   font-size: 70px;
   line-height: 153px;
   letter-spacing: 0.1em;
+  padding: 0px;
 
   /* black 2 5 */
 
@@ -49,4 +50,15 @@
   width: 100%;
   height: 100vh;
   background-color: rgb(189, 251, 255);
+  padding: 0px;
+}
+
+.col{
+  padding: 0px;
+}
+
+.row{
+  padding: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
