--- a/frontend/src/components/styles/search-bar.css
+++ b/frontend/src/components/styles/search-bar.css
@@ -1,55 +1,95 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
-.container-1{
-    width: 300px;
-    padding: 20px;
-    vertical-align: middle;
-    white-space: nowrap;
-    position: relative;
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
+.box {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+  padding-bottom: 30px;
 }
-.container-1 input#search{
-    width: 300px;
-    height: 30px;
-    background: #E1E1E1;
-    border: none;
-    font-family: 'Nunito', sans-serif;
-    font-size: 10pt;
-    float: left;
-    color:  #141414;
-    padding-left: 45px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 10px;
-    -webkit-transition: background .55s ease;
-    -moz-transition: background .55s ease;
-    -ms-transition: background .55s ease;
-    -o-transition: background .55s ease;
-    transition: background .55s ease;
+.container-1 {
+  width: 300px;
+  padding-top: 20px;
+  margin-left: 10px;
+  vertical-align: middle;
+  white-space: nowrap;
+  position: relative;
+}
+.container-1 input#search {
+  width: 350px;
+  height: 40px;
+  background: #e1e1e1;
+  border: none;
+  font-family: "Nunito", sans-serif;
+  font-size: 10pt;
+  float: left;
+  color: #141414;
+  padding-left: 45px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 10px;
+  -webkit-transition: background 0.55s ease;
+  -moz-transition: background 0.55s ease;
+  -ms-transition: background 0.55s ease;
+  -o-transition: background 0.55s ease;
+  transition: background 0.55s ease;
 }
 
 .container-1 input#search::-webkit-input-placeholder {
-    color: #65737e;
- }
-  
- .container-1 input#search:-moz-placeholder { /* Firefox 18- */
-    color: #65737e;  
- }
-  
- .container-1 input#search::-moz-placeholder {  /* Firefox 19+ */
-    color: #65737e;  
- }
-  
- .container-1 input#search:-ms-input-placeholder {  
-    color: #65737e;  
- }
- .container-1 .icon{
-    position: absolute;
-    top: 50%;
-    margin-left: 17px;
-    margin-top: 5px;
-    z-index: 1;
-    color: #4f5b66;
-  }
-  .container-1 input#search:hover, .container-1 input#search:focus, .container-1 input#search:active{
-    outline:none;
-    background: #cedaff;
-  }
+  color: #65737e;
+}
+
+.container-1 input#search:-moz-placeholder {
+  /* Firefox 18- */
+  color: #65737e;
+}
+
+.container-1 input#search::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #65737e;
+}
+
+.container-1 input#search:-ms-input-placeholder {
+  color: #65737e;
+}
+.container-1 .icon {
+  position: absolute;
+  top: 50%;
+  margin-left: 17px;
+  margin-top: 5px;
+  z-index: 1;
+  color: #4f5b66;
+}
+.container-1 input#search:hover,
+.container-1 input#search:focus,
+.container-1 input#search:active {
+  outline: none;
+  background: #cedaff;
+  text-align: left;
+}
+
+.img-notify {
+  margin: auto;
+  margin-top: 15px;
+  margin-left: 7px;
+  margin-right: 7px;
+  padding: 4px;
+  width: 35px;
+}
+
+.img-perfil {
+  margin: auto;
+  margin-top: 7px;
+  margin-left: 7px;
+  margin-right: 7px;
+  padding: 4px;
+  width: 50px;
+}
+
+.img-logout {
+  margin: auto;
+  margin-top: 7px;
+  margin-left: 7px;
+  margin-right: 15px;
+  padding: 4px;
+  width: 45px;
+}
