--- a/frontend/src/components/styles/nav-bar.css
+++ b/frontend/src/components/styles/nav-bar.css
@@ -4,15 +4,19 @@ body{
     font-family: 'Nunito', sans-serif;
     /*background-color: black;*/
 }
+.box{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
 .nav-2{
     display: flex;
-    position: static;
+    position: relative;
     background: rgb(133, 146, 158 ,0.5);
-    margin-left: 150px;
-    width: auto;
+    width: 100%;
     border-radius: 10px;
-    margin-top: 20px;
-    margin-right: 150px;
+    margin-top: 10px;
 }
 
 .nav-2 a{
