--- a/frontend/src/core/styles/Login.css
+++ b/frontend/src/core/styles/Login.css
@@ -2,3 +2,9 @@
     width: 100%;
     margin: 0 0 0 auto;
 }
+
+.ProfileInf{
+    height: 100vh;
+    box-shadow: 1px 0px 0px 0 rgba(0, 0, 0,0.4);
+    /* filter: drop-shadow(0 0px 10px rgba(0, 0, 0, 0.089)); */
+}
