--- a/frontend/src/components/styles/post.css
+++ b/frontend/src/components/styles/post.css
@@ -1,13 +1,12 @@
 .card-post {
-    background: rgba(167, 166, 166, 0.2) ;
-    margin: auto;
-    width: 800px;
-    height: 150px;
-    margin-left: 30px;
-    padding: 25px;
+  background: rgba(167, 166, 166, 0.2);
+  height: 150px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding: 25px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  margin-left: 20px;
+  padding-left: 20px;
   align-items: center;
 }
 
