--- a/frontend/src/components/styles/profile.css
+++ b/frontend/src/components/styles/profile.css
@@ -1,12 +1,16 @@
 .card-profile {
     /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s; */
-    margin-top: 100px;
-    margin-left: 20px;
-    width: 370px;
+    padding-top: 130px;
+    padding-left: 30px;
+    padding-right: 40px;
+    width: 390px;
+    height: 100vh;
     justify-content: center;
     /* box-shadow: 4px 0px 0px 0 rgba(0, 0, 0); */
     text-align: center;
+    border-right: 1px solid rgba(0, 0, 0, 0.315);
+    position: fixed;
 }
   
   /* .card-profile:hover {
