--- a/frontend/src/components/styles/post.css
+++ b/frontend/src/components/styles/post.css
@@ -1,15 +1,164 @@
-.card-post {
-  background: rgba(167, 166, 166, 0.2);
-  height: 150px;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 25px;
+/* .card-post {
+    background: rgba(167, 166, 166, 0.2) ;
+    margin: auto;
+    width: 800px;
+    height: 150px;
+    margin-left: 30px;
+    padding: 25px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  padding-left: 20px;
+  margin-left: 20px;
   align-items: center;
-}
+} */
 
 /* .card-post :hover {
   box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.2);
 } */
+
+/* nuevito */
+
+.facebook-thumbnail {
+  max-width: 490px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  border-radius: 4px;
+  padding-top: 12px;
+  padding-right: 12px;
+  padding-bottom: 12px;
+  padding-left: 12px;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.38;
+}
+.facebook-card-pub {
+  width: 470px;
+}
+.facebook-card-head {
+  display: flex;
+  align-items: center;
+}
+.facebook-card-user-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+.publicidad {
+  font-size: 10px;
+  color: #ccc;
+  text-align: left;
+}
+.internet-icon {
+  color: #ccc;
+}
+.facebook-user-name {
+  font-size: 20px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #3d3d3d;
+}
+
+.facebook-card-content {
+  font-weight: normal;
+  text-decoration: none;
+  color: #4068ad;
+}
+.elips-card-icon {
+  display: flex;
+  align-items: 0;
+  font-weight: normal;
+  text-decoration: none;
+  color: #636363;
+  text-align: right;
+}
+.facebook-content {
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+.facebook-down-post {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 12px;
+  margin-left: 12px;
+}
+.text-content-down {
+  font-family: noto;
+  font-size: 18px;
+  font-weight: Bold;
+}
+.text-content-info {
+  font-size: 12px;
+}
+.text-content-fin {
+  font-size: 10px;
+  color: #ccc;
+  text-align: left;
+}
+.mas-info {
+  border: 1px solid;
+  border-radius: 1px;
+  border-top-left-radius: 1px;
+  border-top-right-radius: 1px;
+  border-bottom-right-radius: 1px;
+  border-bottom-left-radius: 1px;
+  box-sizing: content-box;
+  font-size: 12px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #636363;
+  text-align: right;
+  font-weight: bold;
+  justify-content: center;
+  padding: 0 8px;
+  padding-top: 0px;
+  padding-right: 8px;
+  padding-bottom: 0px;
+  padding-left: 8px;
+}
+.reactions {
+  font-size: 14px;
+  color: rgb(48, 48, 48);
+}
+hr {
+  border: none;
+  border-bottom: 1px solid #ccc;
+}
+.mas-info-2 {
+  border: 1px solid;
+  border-radius: 1px;
+  border-top-left-radius: 1px;
+  border-top-right-radius: 1px;
+  border-bottom-right-radius: 1px;
+  border-bottom-left-radius: 1px;
+  box-sizing: content-box;
+  font-size: 15px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #383838;
+  font-weight: bold;
+  justify-content: center;
+  padding: 0 8px;
+  padding-top: 8px;
+  padding-right: 8px;
+  padding-bottom: 0px;
+  padding-left: 8px;
+  border: none;
+  outline: none;
+  width: 30%;
+}
+.button {
+  width: 30%;
+}
+
+.color-chart {
+  position: absolute;
+  margin-top: 15px;
+  width: 25px;
+  height: 25px;
+  /* -moz-border-radius: 50%; */
+  /* -webkit-border-radius: 50%; */
+  border-radius: 50%;
+  background: #5cb85c;
+}
