--- a/frontend/src/components/styles/Form.css
+++ b/frontend/src/components/styles/Form.css
@@ -29,6 +29,30 @@
   color: #949494b0;
 }
 
+.input_caja-status {
+  display: block;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  font-family: "Overpass";
+  font-size: 21px;
+  line-height: normal;
+  border-radius: 20px;
+  width: 100%;
+  height: 85px;
+  border: 1.5px solid #789ade;
+  padding: 12px 15px;
+}
+
+
+.input_caja-status:focus{
+  outline: none;
+  border: 2px solid #6d96e7;
+}
+
+.input_caja-status::placeholder{
+  color: #949494b0;
+}
+
 .etiqueta {
   font-family: Nunito;
   font-style: normal;
@@ -37,6 +61,16 @@
   line-height: 38px;
   letter-spacing: 0.1em;
 
+  color: #444b59;
+}
+
+.etiqueta-edit {
+  font-family: Nunito;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 38px;
+  letter-spacing: 0.1em;
   color: #444b59;
 }
 
