--- a/frontend/src/components/styles/post.css
+++ b/frontend/src/components/styles/post.css
@@ -18,7 +18,7 @@
 /* nuevito */
 
 .facebook-thumbnail {
-  max-width: 490px;
+  max-width: 60vw;
   margin: 0 auto;
   border: 1px solid #ccc;
   background-color: #fff;
@@ -32,7 +32,8 @@
   line-height: 1.38;
 }
 .facebook-card-pub {
-  width: 470px;
+  width: 56vw;
+  margin: auto;
 }
 .facebook-card-head {
   display: flex;
@@ -120,18 +121,13 @@
 .reactions {
   font-size: 14px;
   color: rgb(48, 48, 48);
+  margin-bottom: 0.5rem;
 }
 hr {
   border: none;
   border-bottom: 1px solid #ccc;
 }
 .mas-info-2 {
-  border: 1px solid;
-  border-radius: 1px;
-  border-top-left-radius: 1px;
-  border-top-right-radius: 1px;
-  border-bottom-right-radius: 1px;
-  border-bottom-left-radius: 1px;
   box-sizing: content-box;
   font-size: 15px;
   font-weight: normal;
@@ -139,11 +135,10 @@ hr {
   color: #383838;
   font-weight: bold;
   justify-content: center;
-  padding: 0 8px;
   padding-top: 8px;
   padding-right: 8px;
+  padding-left: 3px;
   padding-bottom: 0px;
-  padding-left: 8px;
   border: none;
   outline: none;
   width: 30%;
@@ -161,4 +156,30 @@ hr {
   /* -webkit-border-radius: 50%; */
   border-radius: 50%;
   background: #5cb85c;
+}
+
+.input-text{
+  border: 0;
+  display: block;
+  height: auto;
+  width: 100%;
+  margin-bottom: 4px;
+  margin-top: 4px;
+}
+
+.sub{
+  border-bottom: 1px solid #5e92a17e;
+}
+
+.input-text:focus{
+  outline: none;
+}
+
+.sub:focus{
+  
+  border-bottom: 2px solid #3f616b94;
+}
+
+.input-text::placeholder{
+  color: #949494b0;
 }
