--- a/frontend/src/components/styles/profile.css
+++ b/frontend/src/components/styles/profile.css
@@ -4,7 +4,7 @@
     padding-top: 130px;
     padding-left: 30px;
     padding-right: 40px;
-    width: 390px;
+    width: 30vw;
     height: 100vh;
     justify-content: center;
     /* box-shadow: 4px 0px 0px 0 rgba(0, 0, 0); */
