--- a/frontend/src/core/styles/general.css
+++ b/frontend/src/core/styles/general.css
@@ -59,15 +59,20 @@
 .section-description{
   width: 100%;
   height: 100vh;
-  background-color: rgb(189, 251, 255);
+  background-color: rgb(208, 250, 253);
 }
 
-.col{
-  padding: 0px;
+.margin-sides-1{
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
-.row{
-  padding: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
+.margin-sides-20px{
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.button-newpost{
+  width: 60vw;
+  background-color: #565f6680;
 }
