--- a/frontend/src/components/styles/search-bar.css
+++ b/frontend/src/components/styles/search-bar.css
@@ -1,16 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
 .box {
-  position: relative;
+  position: fixed;
+  z-index: 1;
   display: flex;
   justify-content: space-between;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
+  padding-left: 25px;
+  padding-right: 20px;
+  margin-bottom: 50px;
+  background: #fafeff;
+  
+  border-bottom: 1px solid rgba(82, 82, 82, 0.247);
 }
+
+.yes{
+  width: 70vw;
+}
+
+.none{
+  width: 100vw;
+}
+
 .container-1 {
   width: 300px;
-  padding-top: 15px;
+  padding-top: 10px;
   vertical-align: middle;
   white-space: nowrap;
   position: relative;
@@ -58,7 +72,7 @@
   padding-left: 100px;
   margin-top: 5px;
   z-index: 1;
-  color: #4f5b66;
+  color: #ff0000;
 }
 .container-1 input#search:hover,
 .container-1 input#search:focus,
@@ -69,6 +83,8 @@
 }
 
 .img-perfil {
+  position: relative;
+  right: 0px;
   margin: auto;
   margin-top: 7px;
   margin-left: 15px;
@@ -82,4 +98,12 @@
   margin-left: 15px;
   padding: 4px;
   width: 43px;
+}
+
+.img-search {
+  margin: auto;
+  margin-top: 2px;
+  margin-left: 5px;
+  padding: 4px;
+  width: 35px;
 }
