--- a/frontend/src/components/styles/profile.css
+++ b/frontend/src/components/styles/profile.css
@@ -39,8 +39,14 @@
   .picture-profile {
     position: relative;
     margin: auto;
-    width: 200px;
+    width: 160px;
     padding: auto;
+    border-radius: 50%;
+    border-top-left-radius: 50% 50%;
+  border-top-right-radius: 50% 50%;
+  border-bottom-right-radius: 50% 50%;
+  border-bottom-left-radius: 50% 50%;
+  border-color: rgb(31, 35, 37);
   }
   
   .aux {
